--- a/index.html
+++ b/index.html
@@ -161,10 +161,12 @@
             </div>
 
             <div>
+                <i class='bx bx-network-chart'></i>
                 <h3> Nasdaq
             </div>
             </h3>
             <div>
+                <i class='bx bx-dna'></i>
                 <h3> NetApp
             </div>
             </h3>
@@ -174,7 +176,7 @@
     <div class="section-wrapper1">
         <div class="text2">
             <h1>What our students say</h1>
-            <p class="p">
+            <p class="p4">
                 Lorem ipsum dolor elit sit amet elit adipisicing elit. <br> Accusamus ipsam architecto tenetur
                 voluptate elit <br>
                 perferendis velit nihil elit fugit porro eveniet.</p>
